--- a/index.html
+++ b/index.html
@@ -1,20 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
-    <link rel="stylesheet" href="./index.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Resume</title>
+  <link rel="stylesheet" href="./index.css" />
 </head>
 <body>
-    <h1>Application to join Zuri</h1>
-    <h2>Dear Hiring Manager,</h2>
-    <p>I am very excited to submit my application for the role of a front end developer at Zuri</p>
-    <p>I believe my experience and skills make me suitable for the role and would enable me to hit the ground running, making an immediate impact</p>
-    <p>T'm really enthused about this opportunity and would highly appreciate a meeting with you to talk more about the role<br/>
-    Thank you for your time and consideration and I look forward to hearing from you.<br/> Yours truly, <br/> Paul Ogolla
-    </p>
-    
+<nav>
+  <div class="nav__left">
+    <h1>Paul Ogolla</h1>
+    <h2>Frontend Developer</h2>
+  </div>
+  <div class="nav__right">
+    <p>+254-710-789-775</p>
+    <p>paulotieno2@gmail.com</p>
+    <span><a href="https://github.com/paulzay">Github</a><a href="https://www.linkedin.com/in/paulogolla">LinkedIn</a></span>
+  </div>
+</nav>
+<main>
+  <div class="main__left">
+    <div class="exp">
+      <div >
+        <h2>EXPERIENCE</h2>
+        <div class="">
+          <h3>BeyondIT.SRL, Remote(Italy)</h3>
+          <h4>Software Engineer (Contract) | July 2021 - Aug 2021</h4>
+          <p>Worked on various B2B projects, adding new features, refactoring, and fixing bugs with React, JavaScript, and TypeScript to optimize performance and improved user experience which lead to saving time for the client.</p>
+        </div>
+      </div>
+    </div>
+    <div class="edu">
+      <h2>EDUCATION</h2>
+      <div class="">
+        <h3>Zuri Training, Remote | June 2021– Aug 2021</h3>
+        <h4>Mobile Dvelopment</h4>
+        <p>Studies mobile development with Dart and Flutter and built an app</p>
+      </div>
+      <div class="">
+        <h3>Microverse, Remote | April 2020 – Jan 2021</h3>
+        <h4>Remote Full Stack Software Development Program</h4>
+        <p>Spent 1600+ hours mastering algorithms, data structures, and full-stack development while simultaneously developing projects in Ruby, Rails, JavaScript, React, and Redux.</p>
+      </div>
+    </div>
+  </div>
+  <div class="main__right">
+    <h2>SKILLS</h2>
+    <div class="frontend">
+      <h3>Frontend Development</h3>
+      <p>JavaScript, Typescript, ES6, React, Redux, Nextjs, HTML, CSS, Bootstrap, Sass/SCSS, MaterialUI, JQuery, AJAX</p>
+    </div>
+    <div class="backend">
+      <h3>Backend Development</h3>
+      <p>Ruby, Ruby on Rails, PostgreSQL, Python, Flask, GraphQL, Node.js, Express, MongoDB, SQL, API, NoSQL</p>
+    </div>
+    <div class="mobile">
+      <h3>Mobile Development</h3>
+      <p>Dart, Flutter, Kotlin</p>
+    </div>
+    <div >
+      <h3>Tools & Methods</h3>
+      <p>Git, GitHub, Heroku, Netlify, Vercel, Mobile/Responsive Development, RSpec, Jest, Enzyme, Pytest, Nosetest, Agile Software Development, MVC
+      </p>
+    </div>
+  </div>
+</main>    
 </body>
 </html>
