--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="">
         <h3>Zuri Training, Remote | June 2021– Aug 2021</h3>
         <h4>Mobile Dvelopment</h4>
-        <p>Studies mobile development with Dart and Flutter and built an app</p>
+        <p>Studied mobile development with Dart and Flutter and built an app</p>
       </div>
       <div class="">
         <h3>Microverse, Remote | April 2020 – Jan 2021</h3>
@@ -63,6 +63,10 @@
       <h3>Tools & Methods</h3>
       <p>Git, GitHub, Heroku, Netlify, Vercel, Mobile/Responsive Development, RSpec, Jest, Enzyme, Pytest, Nosetest, Agile Software Development, MVC
       </p>
+    </div>
+    <div class="prf">
+      <h3>Soft Skills</h3>
+      <p>Troubleshooting, creative, documentation, Self-motivated, dedicated, creative,  Attention to detail, fast learner, collaborative, self-directed, adaptable,</p>
     </div>
   </div>
 </main>    
